# credit-scoring

./: .pre-commit-config.yaml  README.md  credit_scoring_app_shap_VF_2.py  directory_structure.txt  directory_structure_w_files.txt  pyproject.toml  requirements.txt  setup.cfg  streamlit_cloud_app_VF.py  streamlit_cloud_app_credit_scoring.py  streamlit_cloud_app_v1.py  streamlit_cloud_app_v2.py  y_resampled.csv
.devcontainer/: devcontainer.json
credit-scoring/: .coveragerc  LICENSE  Makefile  OCDS-P7.env  requirements.txt  setup.cfg
credit-scoring/docs/: mkdocs.yml
credit-scoring/tests/: test_app.py
docs/docs/: index.md
references/: data_dictionary.xlsx
reports/: target_drift_report.html
